fixed title selector on mobile

--- a/css/app.scss
+++ b/css/app.scss
@@ -24,7 +24,6 @@ body {
   color: $yellow;
   font-family: fantasy;
   position: relative;
-  height: 100vh;
   overflow: hidden;
 }
 
