--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
   color: #fff989;
   font-family: fantasy;
   position: relative;
-  height: 100vh;
   overflow: hidden;
 }
 
